--- a/render.yaml
+++ b/render.yaml
@@ -4,16 +4,18 @@ services:
     env: python
     plan: free
     buildCommand: |
+      pip install --upgrade pip
       pip install -r requirements.txt
       python manage.py migrate
-    startCommand: python manage.py runserver 0.0.0.0:8000
+      python manage.py collectstatic --noinput
+    startCommand: gunicorn app.wsgi:application
     envVars:
       - key: DEBUG
-        value: false
+        value: False
       - key: SECRET_KEY
         generateValue: true
       - key: ALLOWED_HOSTS
-        value: "*"
+        value: property-maintenance-lite.onrender.com,localhost,127.0.0.1
       - key: DATABASE_URL
         fromDatabase:
           name: property-maintenance-db
