--- a/render.yaml
+++ b/render.yaml
@@ -6,9 +6,9 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      python manage.py migrate
       python manage.py collectstatic --noinput
-    startCommand: gunicorn app.wsgi:application
+    startCommand: |
+      python manage.py migrate && gunicorn app.wsgi:application
     envVars:
       - key: DEBUG
         value: False
