--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
       pip install --upgrade pip
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
-      python manage.py migrate --noinput
-    startCommand: gunicorn app.wsgi:application
+    startCommand: |
+      python manage.py migrate --noinput && gunicorn app.wsgi:application
     envVars:
       - key: DEBUG
         value: False
