--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
     startCommand: |
-      python manage.py migrate --noinput
+      python manage.py migrate --noinput && gunicorn app.wsgi:application
     envVars:
       - key: DEBUG
         value: False
@@ -24,4 +24,5 @@ services:
 databases:
   - name: property-maintenance-db
     plan: free
+
 
